[package]
name = "drawtool-collab"
version = "0.1.0"
authors = ["Marcus Weiner <marcus.weiner@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
http = "0.2.4"
nanoid = "0.4.0"
pin-project = "1.0.7"
serde = { version = "1.0.126", features = ["derive", "rc"] }
tokio = { version = "1.7.0", features = ["macros", "rt", "rt-multi-thread", "net", "sync"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
warp = "0.3.1"
